[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Images/options-menu-header.png" type="Texture" id=1]
[ext_resource path="res://Assets/TitleTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Options/Options.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="ImageTexture" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 20
border_width_bottom = 20

[sub_resource type="ImageTexture" id=4]

[node name="Node" type="Node"]
script = ExtResource( 4 )

[node name="ColorRectBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.709804, 0.709804, 0.709804, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 100
custom_constants/margin_left = 50
custom_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 100.0
margin_right = 1030.0
margin_bottom = 1720.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 980.0
margin_bottom = 808.0
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="OptionsContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 812.0
margin_right = 980.0
margin_bottom = 1620.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 50
columns = 2

[node name="Volume" type="Label" parent="MarginContainer/VBoxContainer/OptionsContainer"]
margin_right = 410.0
margin_bottom = 99.0
theme = ExtResource( 2 )
text = "Volume"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/OptionsContainer"]
margin_left = 460.0
margin_right = 980.0
margin_bottom = 99.0

[node name="BGMLabel" type="Label" parent="MarginContainer/VBoxContainer/OptionsContainer"]
margin_top = 103.0
margin_right = 410.0
margin_bottom = 170.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Background Music"

[node name="BGMSlider" type="HSlider" parent="MarginContainer/VBoxContainer/OptionsContainer"]
margin_left = 460.0
margin_top = 103.0
margin_right = 980.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_icons/grabber = SubResource( 3 )
custom_styles/slider = SubResource( 2 )
max_value = 1.0
step = 0.01

[node name="SELabel" type="Label" parent="MarginContainer/VBoxContainer/OptionsContainer"]
margin_top = 174.0
margin_right = 410.0
margin_bottom = 241.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Sound Effects"

[node name="SESlider" type="HSlider" parent="MarginContainer/VBoxContainer/OptionsContainer"]
margin_left = 460.0
margin_top = 174.0
margin_right = 980.0
margin_bottom = 241.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_icons/grabber = SubResource( 4 )
custom_styles/slider = SubResource( 2 )
max_value = 1.0
step = 0.01

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/OptionsContainer"]
margin_top = 245.0
margin_right = 410.0
margin_bottom = 245.0

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer/OptionsContainer"]
margin_left = 460.0
margin_top = 245.0
margin_right = 980.0
margin_bottom = 245.0

[node name="BGMLabel2" type="Label" parent="MarginContainer/VBoxContainer/OptionsContainer"]
margin_top = 249.0
margin_right = 410.0
margin_bottom = 316.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Difficulty"

[node name="DifficultySelector" type="OptionButton" parent="MarginContainer/VBoxContainer/OptionsContainer"]
margin_left = 460.0
margin_top = 249.0
margin_right = 980.0
margin_bottom = 316.0
text = "hello world"

[node name="Button" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 61.0
margin_top = -159.0
margin_right = 315.0
margin_bottom = -54.0
theme = ExtResource( 2 )
text = "<- Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/OptionsContainer/BGMSlider" to="." method="_on_BGMSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/OptionsContainer/SESlider" to="." method="_on_SESlider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
